--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+    @font-face {
+        font-family: "Black bubble";
+        src: url('./images/BLACK BUBBLE.ttf') format("truetype");
+    }
+  </style>
   <link href="css/stans-fantastic-project-0e3ffsdfesfa97.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Gothic A1:300,regular,500,600,700,800"]  }});</script>
