--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style type="text/css">
     @font-face {
         font-family: "Black bubble";
-        src: url('./images/BLACK BUBBLE.ttf') format("truetype");
+        src: url('./images/BLACK-BUBBLE.ttf') format("truetype");
     }
   </style>
   <link href="css/stans-fantastic-project-0e3ffsdfesfa97.webflow.css" rel="stylesheet" type="text/css">
