--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu May 13 2021 20:15:45 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri May 14 2021 16:57:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
@@ -6,12 +6,12 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/stans-fantastic-project-0e3ffsdfesfa97.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/eggplant-2021.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Gothic A1:300,regular,500,600,700,800"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
@@ -53,8 +53,8 @@
   <section id="tokenomics" class="cards-section">
     <div class="centered-container w-container">
       <h2 class="heading-6">Tokenomics</h2>
-      <h1 class="heading-18">Token ticker: <strong>$EGGPLANT</strong><strong class="bold-text-5"><br>Contract address:<br></strong><span><strong class="bold-text-5">‍</strong></span><span class="text-span"><strong class="bold-text-6">0x1583fFE1720027500ba6b284B1b1e9755d43e479</strong></span><span><strong class="bold-text-5"><br></strong></span><strong class="bold-text-5">Total Supply: </strong><strong>100,000,000,000,000<br></strong>Token Burn:<strong> 50,000,000,000,000<br></strong>Marketing Allocation:<strong> 7,500,000,000,000<br></strong>Pancakeswap Liquidity Pool:<strong> 42,500,000,000,000</strong><strong class="bold-text-5"><br>Circulating Supply: </strong><strong>&lt;50,000,000,000,000</strong></h1>
-      <p class="paragraph-10"><strong><br></strong>Eggplant ($EGGPLANT) is a token on Binance Smart Chain possessing a number of exciting features. Eggplant features a unique deflationary design that exponentially decreases the total supply with every transaction made. <br><br>Eggplant is a decentralized project, meaning it is completlely community led and created by volunteers. There are no founder/developer wallets, however a small portion of tokens (7.5%) are reserved for marketing purposes. Over 50% of tokens are burned forever, and the remaining circulating supply is available on the open market.<br>‍<br><br>There is a <strong class="bold-text">4.5% transaction fee</strong> which is distributed as follows:<br><strong class="bold-text-2">2%</strong> is redistributed to all holders<strong><br></strong><strong class="bold-text-3">2%</strong> is added to Pancakeswap&#x27;s Liquidity Pool<strong><br></strong><strong class="bold-text-4">0.5%</strong> is sent to the burn address, meaning these are out of circulation forever, thus increasing the intial 50% burned amount.<br><br>There is an early withdrawal fee of 4% when selling tokens within 72 hours of buying. <br>This fee will be sent to the burn address.<br>‍<br>‍<br></p>
+      <h1 class="heading-18">Token ticker: <strong>$EGGPLANT</strong><strong class="bold-text-5"><br>Contract address:<br></strong><span><strong class="bold-text-5">‍</strong></span><span class="text-span"><strong class="bold-text-6">0x1583fFE1720027500ba6b284B1b1e9755d43e479</strong></span><span><strong class="bold-text-5"><br></strong></span><strong class="bold-text-5"><br></strong><span class="text-span-3">Initial Token Release</span><br>Total Supply: <strong>100,000,000,000,000<br></strong>Token Burn:<strong> 50,000,000,000,000<br></strong>Marketing/Development:<strong> 7,500,000,000,000<br></strong>Pancakeswap Liquidity Pool:<strong> 42,500,000,000,000</strong><strong class="bold-text-5"><br>Circulating Supply: </strong><strong>50,000,000,000,000</strong></h1>
+      <p class="paragraph-10"><strong><br></strong>Eggplant ($EGGPLANT) is a token on Binance Smart Chain possessing a number of exciting features. Eggplant features a unique deflationary design that exponentially decreases the total supply with every transaction made. <br><br>Eggplant is a decentralized project, meaning it is completlely community led and created by volunteers. There are no founder/developer wallets, however a small portion of tokens (7.5%) are reserved for marketing and development purposes. Over 50% of tokens are burned forever, and the remaining circulating supply is available on the open market. We have added a 1% max transaction amount to avoid large transactions and price manipulation.<br>‍<br><br>There is a <strong class="bold-text">4.5% transaction fee</strong> which is distributed as follows:<br><strong class="bold-text-2">2%</strong> is redistributed to all holders<strong><br></strong><strong class="bold-text-3">2%</strong> is added to Pancakeswap&#x27;s Liquidity Pool<strong><br></strong><strong class="bold-text-4">0.5%</strong> is sent to the burn address, meaning these are out of circulation forever, thus increasing the intial 50% burned amount.<br>‍<br>‍<br></p>
       <div class="cards-grid-container">
         <div id="w-node-d7765239-53cb-c1ac-656d-fae3026841b0-0dc14e90" class="div-block-13">
           <h3 class="heading-7">👨‍👩‍👧‍👦</h3>
@@ -91,7 +91,11 @@
       <div class="button-wrap">
         <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP</a>
       </div>
-      <div class="w-container"><img src="images/Diamond-Hands.png" loading="lazy" width="500" sizes="(max-width: 479px) 90vw, (max-width: 767px) 70vw, 500px" srcset="images/Diamond-Hands-p-500.png 500w, images/Diamond-Hands-p-800.png 800w, images/Diamond-Hands.png 8185w" alt="" class="image-10"></div>
+      <div class="w-container">
+        <p class="paragraph-9"><br>
+          <a href="https://eggplantcrypto.medium.com/step-by-step-guide-on-how-to-buy-eggplant-on-pancakeswap-23aec7fc5719" target="_blank" class="link-3">Click here for a guide on how to buy Eggplant tokens</a><br>
+        </p><img src="images/Diamond-Hands.png" loading="lazy" width="500" sizes="(max-width: 479px) 90vw, (max-width: 767px) 70vw, 500px" srcset="images/Diamond-Hands-p-500.png 500w, images/Diamond-Hands-p-800.png 800w, images/Diamond-Hands.png 8185w" alt="" class="image-10">
+      </div>
     </div>
   </div>
   <div class="footer">
@@ -100,7 +104,7 @@
         <a href="http://twitter.com/EggplantCrypto" target="_blank" class="footer-link">Twitter</a>
         <a href="https://t.me/joinchat/p21ygChR_-c1YTM0" target="_blank" class="footer-link">Telegram</a>
         <a href="https://eggplantcrypto.medium.com" target="_blank" class="footer-link">Medium</a>
-        <a href="documents/Whitepaper-compressed.pdf" target="_blank" class="footer-link">Whitepaper</a>
+        <a href="documents/Whitepaper-Compressed.pdf" target="_blank" class="footer-link">Whitepaper</a>
         <a href="#" class="footer-link">© Eggplant 2021. All Rights Reserved.</a>
       </div>
       <div class="text-block-3">The information provided in this disclaimer and the corresponding website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website’s content as such. The $EGGPLANT team does not recommend that any cryptocurrency should be bought, sold, or held by you. Do conduct your own due diligence and consult your financial advisor before making any investment decisions. Please refer to the Whitepaper for the full disclaimer.</div>
