--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="section center">
     <div class="hero-content">
       <h3 class="hero-subhead">Eggplant is a new deflationary token on the Binance Smart Chain, featuring it&#x27;s own DEX — A passion project formed from the wet dreams of every crypto enthusiast</h3>
-      <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP</a>
+      <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP!</a>
     </div>
   </div>
   <section id="about" class="feature-section">
