--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri May 14 2021 16:57:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed May 19 2021 08:45:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
@@ -25,6 +25,7 @@
           <nav role="navigation" class="nav-menu-2 w-nav-menu">
             <a href="#about" class="nav-link w-nav-link">About</a>
             <a href="#tokenomics" class="nav-link w-nav-link">Tokenomics</a>
+            <a href="#roadmap" class="nav-link w-nav-link">Roadmap</a>
             <a href="#dex" class="nav-link w-nav-link">DEX</a>
             <a href="https://bscscan.com/token/0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="nav-link w-nav-link">BSC Contract</a>
           </nav>
@@ -38,7 +39,7 @@
   <div class="section center">
     <div class="hero-content">
       <h3 class="hero-subhead">Eggplant is a new deflationary token on the Binance Smart Chain, featuring it&#x27;s own DEX — A passion project formed from the wet dreams of every crypto enthusiast</h3>
-      <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP!</a>
+      <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP</a>
     </div>
   </div>
   <section id="about" class="feature-section">
@@ -74,6 +75,15 @@
       </div>
     </div>
   </section>
+  <section id="roadmap" class="feature-section">
+    <div class="flex-container w-container">
+      <div>
+        <h2 class="heading-5">Roadmap</h2>
+      </div>
+    </div>
+    <div class="container-2 w-container"><img src="images/Roadmap.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap.png 500w, images/Roadmap.png 800w, images/Roadmap.png 960w" alt="" class="image-7"></div>
+    <p class="paragraph-9"><br>Last updated: May 19, 2021<br></p>
+  </section>
   <section id="dex" class="feature-section">
     <div class="flex-container w-container">
       <div>
@@ -81,7 +91,7 @@
         <p class="paragraph-2">Eggplant Swap, inspired by Pancake Swap, is a brand new DEX on the Binance Smart chain. Our exchange will feature both swaps and high APR liquidity pools for top tokens and synthetic versions of traditional assets (Eggplant assets).<br><br>Once this has been launched, the Eggplant team will shift their focus on bringing new exciting features, that currently do not exist in the current decentralized space onto the DEX. Refer to our Whitepaper for more infomation and details.</p>
       </div>
     </div>
-    <div class="container-2 w-container"><img src="images/Swap-Preview.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Swap-Preview-p-500.png 500w, images/Swap-Preview-p-800.png 800w, images/Swap-Preview-p-1080.png 1080w, images/Swap-Preview.png 1227w" alt="" class="image-7"></div>
+    <div class="container-2 w-container"><img src="images/Swap-Preview.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Swap-Preview.png 500w, images/Swap-Preview.png 800w, images/Swap-Preview.png 1080w, images/Swap-Preview.png 1227w" alt="" class="image-7"></div>
     <p class="paragraph-9"><br>We plan on releasing Eggplant DEX later in 2021<br></p>
   </section>
   <div class="bottom-image-wrap"></div>
@@ -101,10 +111,10 @@
   <div class="footer">
     <div class="wrap"><img src="images/Logo-Circle.png" width="100" sizes="100px" srcset="images/Logo-Circle-p-500.png 500w, images/Logo-Circle-p-800.png 800w, images/Logo-Circle-p-1080.png 1080w, images/Logo-Circle-p-1600.png 1600w, images/Logo-Circle.png 2000w" alt="" class="image-8">
       <div class="footer-list">
-        <a href="http://twitter.com/EggplantCrypto" target="_blank" class="footer-link">Twitter</a>
+        <a href="http://twitter.com/EggplantDEX" target="_blank" class="footer-link">Twitter</a>
         <a href="https://t.me/joinchat/p21ygChR_-c1YTM0" target="_blank" class="footer-link">Telegram</a>
         <a href="https://eggplantcrypto.medium.com" target="_blank" class="footer-link">Medium</a>
-        <a href="documents/Whitepaper-Compressed.pdf" target="_blank" class="footer-link">Whitepaper</a>
+        <a href="documents/Whitepaper_compressed.pdf" target="_blank" class="footer-link">Whitepaper</a>
         <a href="#" class="footer-link">© Eggplant 2021. All Rights Reserved.</a>
       </div>
       <div class="text-block-3">The information provided in this disclaimer and the corresponding website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website’s content as such. The $EGGPLANT team does not recommend that any cryptocurrency should be bought, sold, or held by you. Do conduct your own due diligence and consult your financial advisor before making any investment decisions. Please refer to the Whitepaper for the full disclaimer.</div>
