--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed May 19 2021 08:45:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu May 20 2021 11:30:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,10 @@
         <p class="paragraph-2">Why was crypto created in the first place? Have you forgotten? <br>It was to escape the stranglehold Wall Street, governments and big banks have on finance as we know it. Bitcoin was created as a first step after the financial crisis in 2008. Decentralized exchanges like Eggplant are the next step. <br><br>You watched this past year as money printing soared to levels never seen before, centralized exchanges and media sources colluded to manipulate assets and lock you out of trading. On Eggplant DEX, that would be impossible.<br></p>
       </div>
     </div>
-    <div class="container-3 w-container"><img src="images/Eggplant-Chanting.gif" loading="lazy" width="500" alt="" class="image-9"></div>
+    <div class="container-3 w-container"><img src="images/Eggplant-Chanting.gif" loading="lazy" width="500" alt="" class="image-9">
+      <div class="text-block-4"><br>As seen on</div>
+      <a href="https://www.marketwatch.com/press-release/eggplant-binance-smart-chains-freshest-decentralized-exchange-2021-05-20-41973912" target="_blank" class="w-inline-block"><img src="images/marketwatch-vector-logo.png" loading="lazy" width="500" sizes="(max-width: 767px) 92vw, 500px" srcset="images/marketwatch-vector-logo.png 500w, images/marketwatch-vector-logo.png 1251w" alt=""></a>
+    </div>
   </section>
   <section id="tokenomics" class="cards-section">
     <div class="centered-container w-container">
@@ -81,7 +84,7 @@
         <h2 class="heading-5">Roadmap</h2>
       </div>
     </div>
-    <div class="container-2 w-container"><img src="images/Roadmap.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap.png 500w, images/Roadmap.png 800w, images/Roadmap.png 960w" alt="" class="image-7"></div>
+    <div class="container-2 w-container"><img src="images/Roadmap.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap-p-500.png 500w, images/Roadmap-p-800.png 800w, images/Roadmap.png 960w" alt="" class="image-7"></div>
     <p class="paragraph-9"><br>Last updated: May 19, 2021<br></p>
   </section>
   <section id="dex" class="feature-section">
@@ -91,7 +94,7 @@
         <p class="paragraph-2">Eggplant Swap, inspired by Pancake Swap, is a brand new DEX on the Binance Smart chain. Our exchange will feature both swaps and high APR liquidity pools for top tokens and synthetic versions of traditional assets (Eggplant assets).<br><br>Once this has been launched, the Eggplant team will shift their focus on bringing new exciting features, that currently do not exist in the current decentralized space onto the DEX. Refer to our Whitepaper for more infomation and details.</p>
       </div>
     </div>
-    <div class="container-2 w-container"><img src="images/Swap-Preview.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Swap-Preview.png 500w, images/Swap-Preview.png 800w, images/Swap-Preview.png 1080w, images/Swap-Preview.png 1227w" alt="" class="image-7"></div>
+    <div class="container-2 w-container"><img src="images/Swap-Preview.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Swap-Preview-p-500.png 500w, images/Swap-Preview-p-800.png 800w, images/Swap-Preview-p-1080.png 1080w, images/Swap-Preview.png 1227w" alt="" class="image-7"></div>
     <p class="paragraph-9"><br>We plan on releasing Eggplant DEX later in 2021<br></p>
   </section>
   <div class="bottom-image-wrap"></div>
@@ -114,7 +117,7 @@
         <a href="http://twitter.com/EggplantDEX" target="_blank" class="footer-link">Twitter</a>
         <a href="https://t.me/joinchat/p21ygChR_-c1YTM0" target="_blank" class="footer-link">Telegram</a>
         <a href="https://eggplantcrypto.medium.com" target="_blank" class="footer-link">Medium</a>
-        <a href="documents/Whitepaper_compressed.pdf" target="_blank" class="footer-link">Whitepaper</a>
+        <a href="documents/Whitepaper-Compressed.pdf" target="_blank" class="footer-link">Whitepaper</a>
         <a href="#" class="footer-link">© Eggplant 2021. All Rights Reserved.</a>
       </div>
       <div class="text-block-3">The information provided in this disclaimer and the corresponding website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website’s content as such. The $EGGPLANT team does not recommend that any cryptocurrency should be bought, sold, or held by you. Do conduct your own due diligence and consult your financial advisor before making any investment decisions. Please refer to the Whitepaper for the full disclaimer.</div>
