--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu May 20 2021 11:30:04 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri May 21 2021 08:44:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
@@ -40,6 +40,7 @@
     <div class="hero-content">
       <h3 class="hero-subhead">Eggplant is a new deflationary token on the Binance Smart Chain, featuring it&#x27;s own DEX — A passion project formed from the wet dreams of every crypto enthusiast</h3>
       <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP</a>
+      <div class="text-block-5">Please set slippage to 5% or higher</div>
     </div>
   </div>
   <section id="about" class="feature-section">
@@ -51,7 +52,7 @@
     </div>
     <div class="container-3 w-container"><img src="images/Eggplant-Chanting.gif" loading="lazy" width="500" alt="" class="image-9">
       <div class="text-block-4"><br>As seen on</div>
-      <a href="https://www.marketwatch.com/press-release/eggplant-binance-smart-chains-freshest-decentralized-exchange-2021-05-20-41973912" target="_blank" class="w-inline-block"><img src="images/marketwatch-vector-logo.png" loading="lazy" width="500" sizes="(max-width: 767px) 92vw, 500px" srcset="images/marketwatch-vector-logo.png 500w, images/marketwatch-vector-logo.png 1251w" alt=""></a>
+      <a href="https://www.marketwatch.com/press-release/eggplant-binance-smart-chains-freshest-decentralized-exchange-2021-05-20-41973912" target="_blank" class="w-inline-block"><img src="images/marketwatch-vector-logo.png" loading="lazy" width="500" sizes="(max-width: 767px) 92vw, 500px" srcset="images/marketwatch-vector-logo-p-500.png 500w, images/marketwatch-vector-logo.png 1251w" alt=""></a>
     </div>
   </section>
   <section id="tokenomics" class="cards-section">
@@ -104,11 +105,10 @@
       <div class="button-wrap">
         <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP</a>
       </div>
-      <div class="w-container">
-        <p class="paragraph-9"><br>
-          <a href="https://eggplantcrypto.medium.com/step-by-step-guide-on-how-to-buy-eggplant-on-pancakeswap-23aec7fc5719" target="_blank" class="link-3">Click here for a guide on how to buy Eggplant tokens</a><br>
-        </p><img src="images/Diamond-Hands.png" loading="lazy" width="500" sizes="(max-width: 479px) 90vw, (max-width: 767px) 70vw, 500px" srcset="images/Diamond-Hands-p-500.png 500w, images/Diamond-Hands-p-800.png 800w, images/Diamond-Hands.png 8185w" alt="" class="image-10">
-      </div>
+      <p class="paragraph-9"><br>
+        <a href="https://eggplantcrypto.medium.com/step-by-step-guide-on-how-to-buy-eggplant-on-pancakeswap-23aec7fc5719" target="_blank" class="link-3">Click here for a guide on how to buy Eggplant tokens</a><br>
+      </p>
+      <div class="w-container"><img src="images/Diamond-Hands.png" loading="lazy" width="500" sizes="(max-width: 479px) 90vw, (max-width: 767px) 70vw, 500px" srcset="images/Diamond-Hands-p-500.png 500w, images/Diamond-Hands-p-800.png 800w, images/Diamond-Hands.png 8185w" alt="" class="image-10"></div>
     </div>
   </div>
   <div class="footer">
