--- a/index.html
+++ b/index.html
@@ -2,7 +2,40 @@
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
-  <title>Eggplant</title>
+  <title>Eggplant Crypto</title>
+
+  <meta name="title" content="Eggplant Crypto">
+  <meta name="description" content="The Official Home of Eggplant Crypto: Eggplant Crypto is a new deflationary token on the Binance Smart Chain, featuring it's own DEX.">
+  <meta name="keywords" content="Eggplant Crypto, Eggplant Cryptocurrency, Crypto Eggplant">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+
+  <!--     ██                                        
+  ██▒▒██                                      
+██▒▒▒▒██                                      
+████▒▒▒▒██  ██████                            
+  ██▒▒▒▒▒▒██▒▒▒▒▒▒██                          
+    ██▒▒▒▒▒▒▒▒██████                          
+  ██▒▒▒▒▒▒▒▒██▓▓▓▓▓▓██                        
+  ██▒▒████▒▒██▓▓▓▓▓▓▓▓██                      
+  ██▒▒██████▓▓▓▓▓▓▓▓▓▓▓▓████                  
+  ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓████              
+  ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▓▓▓▓██████        
+  ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▓▓▓▓▓▓▓▓██      
+    ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓▓▓██    
+    ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓▓▓██  
+      ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓██  
+      ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓██
+        ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓██
+          ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓██
+            ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▓▓████
+              ██████████▓▓▓▓▓▓▓▓▓▓▒▒▒▒▓▓████  
+                ██████████▓▓▓▓▓▓▓▓▓▓▓▓██████  
+                  ████████████████████████    
+                    ████████████████████      
+                        ████████████          
+ -->
+
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
