--- a/index.html
+++ b/index.html
@@ -1,41 +1,8 @@
-<!DOCTYPE html><!--  Last Published: Fri May 21 2021 09:45:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed May 26 2021 12:54:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
-  <title>Eggplant Crypto</title>
-
-  <meta name="title" content="Eggplant Crypto">
-  <meta name="description" content="The Official Home of Eggplant Crypto: Eggplant Crypto is a new deflationary token on the Binance Smart Chain, featuring it's own DEX.">
-  <meta name="keywords" content="Eggplant Crypto, Eggplant Cryptocurrency, Crypto Eggplant">
-  <meta name="robots" content="index, follow">
-  <meta name="language" content="English">
-
-  <!--     ██                                        
-  ██▒▒██                                      
-██▒▒▒▒██                                      
-████▒▒▒▒██  ██████                            
-  ██▒▒▒▒▒▒██▒▒▒▒▒▒██                          
-    ██▒▒▒▒▒▒▒▒██████                          
-  ██▒▒▒▒▒▒▒▒██▓▓▓▓▓▓██                        
-  ██▒▒████▒▒██▓▓▓▓▓▓▓▓██                      
-  ██▒▒██████▓▓▓▓▓▓▓▓▓▓▓▓████                  
-  ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓████              
-  ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▓▓▓▓██████        
-  ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▓▓▓▓▓▓▓▓██      
-    ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓▓▓██    
-    ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓▓▓██  
-      ████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓██  
-      ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓██
-        ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓██
-          ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▓▓██
-            ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▓▓████
-              ██████████▓▓▓▓▓▓▓▓▓▓▒▒▒▒▓▓████  
-                ██████████▓▓▓▓▓▓▓▓▓▓▓▓██████  
-                  ████████████████████████    
-                    ████████████████████      
-                        ████████████          
- -->
-
+  <title>Eggplant</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
@@ -57,10 +24,11 @@
         <div class="nav-menu-wrap">
           <nav role="navigation" class="nav-menu-2 w-nav-menu">
             <a href="#about" class="nav-link w-nav-link">About</a>
-            <a href="#tokenomics" class="nav-link w-nav-link">Tokenomics</a>
-            <a href="#roadmap" class="nav-link w-nav-link">Roadmap</a>
             <a href="#dex" class="nav-link w-nav-link">DEX</a>
-            <a href="https://bscscan.com/token/0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="nav-link w-nav-link">BSC Contract</a>
+            <a href="#roadmap" class="nav-link w-nav-link">Roadmap</a>
+            <a href="#tokenomics" class="nav-link w-nav-link">Tokenomics</a>
+            <a href="#team" class="nav-link w-nav-link">Team</a>
+            <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button-2 w-button">BUY EGGPLANT</a>
           </nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
@@ -72,8 +40,7 @@
   <div class="section center">
     <div class="hero-content">
       <h3 class="hero-subhead">Eggplant is a new deflationary token on the Binance Smart Chain, featuring it&#x27;s own DEX — A passion project formed from the wet dreams of every crypto enthusiast</h3>
-      <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP</a>
-      <div class="text-block-5">Please set slippage to 5% or higher</div>
+      <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button w-button">BUY EGGPLANT</a>
     </div>
   </div>
   <section id="about" class="feature-section">
@@ -85,8 +52,24 @@
     </div>
     <div class="container-3 w-container"><img src="images/Eggplant-Chanting.gif" loading="lazy" width="500" alt="" class="image-9">
       <div class="text-block-4"><br>As seen on</div>
-      <a href="https://www.marketwatch.com/press-release/eggplant-binance-smart-chains-freshest-decentralized-exchange-2021-05-20-41973912" target="_blank" class="w-inline-block"><img src="images/marketwatch-vector-logo.png" loading="lazy" width="500" sizes="(max-width: 767px) 92vw, 500px" srcset="images/marketwatch-vector-logo-p-500.png 500w, images/marketwatch-vector-logo.png 1251w" alt=""></a>
+      <a href="https://www.marketwatch.com/press-release/eggplant-binance-smart-chains-freshest-decentralized-exchange-2021-05-20-41973912" target="_blank" class="w-inline-block"><img src="images/marketwatch-vector-logo.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/marketwatch-vector-logo-p-500.png 500w, images/marketwatch-vector-logo.png 1251w" alt=""></a>
     </div>
+  </section>
+  <section id="dex" class="cards-section">
+    <div class="centered-container w-container">
+      <h2 class="heading-6">DEX</h2>
+      <p class="paragraph-10">Eggplant Swap is a brand new DEX on the Binance Smart chain. Our exchange will feature both swaps and liquidity pools, offering high APR for top tokens and synthetic versions of traditional assets (Eggplant assets).<br><br>The DEX is now live, featuring swaps and the Eggplant-BNB liquidity pool. The Eggplant team is now focusing on adding staking options and bringing new exciting features, that currently do not exist in the decentralized space.<br>Refer to our whitepaper for more infomation and details.<br>‍<br>‍<br></p>
+      <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button w-button">LAUNCH DEX</a>
+    </div>
+  </section>
+  <section id="roadmap" class="feature-section">
+    <div class="flex-container w-container">
+      <div>
+        <h2 class="heading-5">Roadmap</h2>
+      </div>
+    </div>
+    <div class="container-2 w-container"><img src="images/Roadmap-05-26.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap-05-26.png 500w, images/Roadmap-05-26.png 800w, images/Roadmap-05-26.png 960w" alt="" class="image-7"></div>
+    <p class="paragraph-9"><br>Last updated: May 26, 2021<br></p>
   </section>
   <section id="tokenomics" class="cards-section">
     <div class="centered-container w-container">
@@ -112,34 +95,48 @@
       </div>
     </div>
   </section>
-  <section id="roadmap" class="feature-section">
+  <section id="team" class="feature-section">
     <div class="flex-container w-container">
       <div>
-        <h2 class="heading-5">Roadmap</h2>
+        <h2 class="heading-5">Team</h2>
+        <div class="cards-grid-container">
+          <div id="w-node-_77e8e7a9-4d08-b2fe-1706-95c69297a10d-0dc14e90" class="div-block-13"><img src="images/CEO.png" loading="lazy" width="200" height="200" srcset="images/CEO.png 500w, images/CEO.png 600w" sizes="200px" alt="">
+            <h3 class="heading-8">mr. eggplant</h3>
+            <p class="paragraph-3">Founder and CEO<br></p>
+          </div>
+          <div id="w-node-d1acc369-546a-899f-9d08-9d0e7b3b4772-0dc14e90" class="div-block-13"><img src="images/Community.png" loading="lazy" width="200" height="200" srcset="images/Community.png 500w, images/Community.png 600w" sizes="200px" alt="">
+            <h3 class="heading-8">Julia</h3>
+            <p class="paragraph-3">Cummunity and Support<br></p>
+          </div>
+          <div id="w-node-a28c8e10-3013-f925-9701-cb2f25f23e34-0dc14e90" class="div-block-13"><img src="images/Developer.png" loading="lazy" width="200" height="200" srcset="images/Developer.png 500w, images/Developer.png 600w" sizes="200px" alt="">
+            <h3 class="heading-8">Block</h3>
+            <p class="paragraph-3">Core Development<br></p>
+          </div>
+          <div id="w-node-_128910cb-61c6-e13e-41ff-61796527d9d7-0dc14e90" class="div-block-13"><img src="images/Designer.png" loading="lazy" width="200" height="200" srcset="images/Designer.png 500w, images/Designer.png 600w" sizes="200px" alt="">
+            <h3 class="heading-8">picasso</h3>
+            <p class="paragraph-3">Design<br></p>
+          </div>
+          <div id="w-node-_5f239027-ff5a-57ab-8406-69e0a75b680e-0dc14e90" class="div-block-13"><img src="images/Marketing.png" loading="lazy" width="200" height="200" srcset="images/Marketing.png 500w, images/Marketing.png 600w" sizes="200px" alt="">
+            <h3 class="heading-8">elon</h3>
+            <p class="paragraph-3">Marketing<br></p>
+          </div>
+          <div id="w-node-_8954d7d3-3f0b-7b72-2a3e-273f06728c32-0dc14e90" class="div-block-13"><img src="images/Holders.png" loading="lazy" width="200" height="200" srcset="images/Holders.png 500w, images/Holders.png 600w" sizes="200px" alt="">
+            <h3 class="heading-8">You</h3>
+            <p class="paragraph-3">Holder and Community Member<br></p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="container-2 w-container"><img src="images/Roadmap.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap-p-500.png 500w, images/Roadmap-p-800.png 800w, images/Roadmap.png 960w" alt="" class="image-7"></div>
-    <p class="paragraph-9"><br>Last updated: May 19, 2021<br></p>
-  </section>
-  <section id="dex" class="feature-section">
-    <div class="flex-container w-container">
-      <div>
-        <h2 class="heading-5">DEX</h2>
-        <p class="paragraph-2">Eggplant Swap, inspired by Pancake Swap, is a brand new DEX on the Binance Smart chain. Our exchange will feature both swaps and high APR liquidity pools for top tokens and synthetic versions of traditional assets (Eggplant assets).<br><br>Once this has been launched, the Eggplant team will shift their focus on bringing new exciting features, that currently do not exist in the current decentralized space onto the DEX. Refer to our Whitepaper for more infomation and details.</p>
-      </div>
-    </div>
-    <div class="container-2 w-container"><img src="images/Swap-Preview.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Swap-Preview-p-500.png 500w, images/Swap-Preview-p-800.png 800w, images/Swap-Preview-p-1080.png 1080w, images/Swap-Preview.png 1227w" alt="" class="image-7"></div>
-    <p class="paragraph-9"><br>We plan on releasing Eggplant DEX later in 2021<br></p>
   </section>
   <div class="bottom-image-wrap"></div>
   <div class="section wide purple">
     <div class="wrap">
       <h2 class="heading-17">join the Eggplant revolution</h2>
       <div class="button-wrap">
-        <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x1583fFE1720027500ba6b284B1b1e9755d43e479" target="_blank" class="button w-button">BUY ON PANCAKESWAP</a>
+        <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button w-button">BUY EGGPLANT</a>
       </div>
       <p class="paragraph-9"><br>
-        <a href="https://eggplantcrypto.medium.com/step-by-step-guide-on-how-to-buy-eggplant-on-pancakeswap-23aec7fc5719" target="_blank" class="link-3">Click here for a guide on how to buy Eggplant tokens</a><br>
+        <a href="https://eggplantcrypto.medium.com/step-by-step-guide-on-how-to-buy-eggplant-on-pancakeswap-23aec7fc5719" target="_blank" class="link-3">Click here for a guide on how to buy Eggplant tokens on PancakeSwap</a><br>
       </p>
       <div class="w-container"><img src="images/Diamond-Hands.png" loading="lazy" width="500" sizes="(max-width: 479px) 90vw, (max-width: 767px) 70vw, 500px" srcset="images/Diamond-Hands-p-500.png 500w, images/Diamond-Hands-p-800.png 800w, images/Diamond-Hands.png 8185w" alt="" class="image-10"></div>
     </div>
