--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed May 26 2021 12:54:33 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu May 27 2021 09:46:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
@@ -68,8 +68,8 @@
         <h2 class="heading-5">Roadmap</h2>
       </div>
     </div>
-    <div class="container-2 w-container"><img src="images/Roadmap-05-26.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap-05-26.png 500w, images/Roadmap-05-26.png 800w, images/Roadmap-05-26.png 960w" alt="" class="image-7"></div>
-    <p class="paragraph-9"><br>Last updated: May 26, 2021<br></p>
+    <div class="container-2 w-container"><img src="images/Roadmap-05-26.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap-05-26-p-500.png 500w, images/Roadmap-05-26-p-800.png 800w, images/Roadmap-05-26.png 960w" alt="" class="image-7"></div>
+    <p class="paragraph-9"><br>Last updated: May 27, 2021<br></p>
   </section>
   <section id="tokenomics" class="cards-section">
     <div class="centered-container w-container">
@@ -100,27 +100,27 @@
       <div>
         <h2 class="heading-5">Team</h2>
         <div class="cards-grid-container">
-          <div id="w-node-_77e8e7a9-4d08-b2fe-1706-95c69297a10d-0dc14e90" class="div-block-13"><img src="images/CEO.png" loading="lazy" width="200" height="200" srcset="images/CEO.png 500w, images/CEO.png 600w" sizes="200px" alt="">
+          <div id="w-node-_77e8e7a9-4d08-b2fe-1706-95c69297a10d-0dc14e90" class="div-block-13"><img src="images/CEO.png" loading="lazy" width="200" height="200" srcset="images/CEO-p-500.png 500w, images/CEO.png 600w" sizes="200px" alt="">
             <h3 class="heading-8">mr. eggplant</h3>
             <p class="paragraph-3">Founder and CEO<br></p>
           </div>
-          <div id="w-node-d1acc369-546a-899f-9d08-9d0e7b3b4772-0dc14e90" class="div-block-13"><img src="images/Community.png" loading="lazy" width="200" height="200" srcset="images/Community.png 500w, images/Community.png 600w" sizes="200px" alt="">
+          <div id="w-node-d1acc369-546a-899f-9d08-9d0e7b3b4772-0dc14e90" class="div-block-13"><img src="images/Community.png" loading="lazy" width="200" height="200" srcset="images/Community-p-500.png 500w, images/Community.png 600w" sizes="200px" alt="">
             <h3 class="heading-8">Julia</h3>
             <p class="paragraph-3">Cummunity and Support<br></p>
           </div>
-          <div id="w-node-a28c8e10-3013-f925-9701-cb2f25f23e34-0dc14e90" class="div-block-13"><img src="images/Developer.png" loading="lazy" width="200" height="200" srcset="images/Developer.png 500w, images/Developer.png 600w" sizes="200px" alt="">
+          <div id="w-node-a28c8e10-3013-f925-9701-cb2f25f23e34-0dc14e90" class="div-block-13"><img src="images/Developer.png" loading="lazy" width="200" height="200" srcset="images/Developer-p-500.png 500w, images/Developer.png 600w" sizes="200px" alt="">
             <h3 class="heading-8">Block</h3>
             <p class="paragraph-3">Core Development<br></p>
           </div>
-          <div id="w-node-_128910cb-61c6-e13e-41ff-61796527d9d7-0dc14e90" class="div-block-13"><img src="images/Designer.png" loading="lazy" width="200" height="200" srcset="images/Designer.png 500w, images/Designer.png 600w" sizes="200px" alt="">
+          <div id="w-node-_128910cb-61c6-e13e-41ff-61796527d9d7-0dc14e90" class="div-block-13"><img src="images/Designer.png" loading="lazy" width="200" height="200" srcset="images/Designer-p-500.png 500w, images/Designer.png 600w" sizes="200px" alt="">
             <h3 class="heading-8">picasso</h3>
             <p class="paragraph-3">Design<br></p>
           </div>
-          <div id="w-node-_5f239027-ff5a-57ab-8406-69e0a75b680e-0dc14e90" class="div-block-13"><img src="images/Marketing.png" loading="lazy" width="200" height="200" srcset="images/Marketing.png 500w, images/Marketing.png 600w" sizes="200px" alt="">
+          <div id="w-node-_5f239027-ff5a-57ab-8406-69e0a75b680e-0dc14e90" class="div-block-13"><img src="images/Marketing.png" loading="lazy" width="200" height="200" srcset="images/Marketing-p-500.png 500w, images/Marketing.png 600w" sizes="200px" alt="">
             <h3 class="heading-8">elon</h3>
             <p class="paragraph-3">Marketing<br></p>
           </div>
-          <div id="w-node-_8954d7d3-3f0b-7b72-2a3e-273f06728c32-0dc14e90" class="div-block-13"><img src="images/Holders.png" loading="lazy" width="200" height="200" srcset="images/Holders.png 500w, images/Holders.png 600w" sizes="200px" alt="">
+          <div id="w-node-_8954d7d3-3f0b-7b72-2a3e-273f06728c32-0dc14e90" class="div-block-13"><img src="images/Holders.png" loading="lazy" width="200" height="200" srcset="images/Holders-p-500.png 500w, images/Holders.png 600w" sizes="200px" alt="">
             <h3 class="heading-8">You</h3>
             <p class="paragraph-3">Holder and Community Member<br></p>
           </div>
