--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu May 27 2021 10:10:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu May 27 2021 10:37:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
@@ -68,7 +68,7 @@
         <h2 class="heading-5">Roadmap</h2>
       </div>
     </div>
-    <div class="container-2 w-container"><img src="images/Roadmap-05-27.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap-05-27.png 500w, images/Roadmap-05-27.png 800w, images/Roadmap-05-27.png 960w" alt="" class="image-7"></div>
+    <div class="container-2 w-container"><img src="images/Roadmap-05-27.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap-05-27-p-500.png 500w, images/Roadmap-05-27-p-800.png 800w, images/Roadmap-05-27.png 960w" alt="" class="image-7"></div>
     <p class="paragraph-9"><br>Last updated: May 27, 2021<br></p>
   </section>
   <section id="tokenomics" class="cards-section">
