--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jun 21 2021 17:02:47 GMT+0000 (Coordinated Universal Time)  
--->
+<!DOCTYPE html><!--  Last Published: Thu Jun 24 2021 16:58:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
@@ -56,7 +55,14 @@
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
-        <h2 class="heading-14">EGGPLANT</h2>
+        <div>
+          <h2 class="heading-14">
+            <a href="#" class="link-9">EGGPLANT</a>
+          </h2>
+          <div class="text-block-7">
+            <a href="#about" class="link-4">About</a>     <a href="#roadmap" class="link-5">Roadmap</a>     <a href="#eggplant-token" class="link-6">$Eggplant Token</a>     <a href="#eseed-token" class="link-8">$ESeed Token</a>     <a href="#press" class="link-8">PRESS</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -70,15 +76,16 @@
     <div class="flex-container w-container">
       <div class="div-block-16">
         <h2 class="heading-5">About</h2>
-        <p class="paragraph-2">Why was crypto created in the first place? Have you forgotten? <br>It was to escape the stranglehold Wall Street, governments and big banks have on finance as we know it. Bitcoin was created as a first step after the financial crisis in 2008. Decentralized exchanges like Eggplant are the next step. <br><br>You watched this past year as money printing soared to levels never seen before, centralized exchanges and media sources colluded to manipulate assets and lock you out of trading. On Eggplant DEX, that would be impossible.<br><br>Eggplant DEX will give all users the opportunity to provide liquidity and stake assets in return for high APR yields.<br>‍<br><br><br></p>
+        <p class="paragraph-2">Why was crypto created in the first place? Have you forgotten? <br>It was to escape the stranglehold Wall Street, governments and big banks have on finance as we know it. Bitcoin was created as a first step after the financial crisis in 2008. Decentralized exchanges like Eggplant are the next step. <br><br>You watched this past year as money printing soared to levels never seen before, centralized exchanges and media sources colluded to manipulate assets and lock you out of trading. On Eggplant DEX, that would be impossible.<br><br>Eggplant DEX will give all users the opportunity to provide liquidity and stake assets in return for high APR yields.<br></p>
+        <h2 id="roadmap" class="heading-5">   </h2>
         <h2 class="heading-5">Roadmap</h2>
         <p class="paragraph-2">Q2 2021:<br><br>🟢 Eggplant token creation<br>🟢 List on PancakeSwap<br>🟢 Get listed on CoinGecko<br>🟢 Get verified on BscScan<br>🟢 Start social media marketing campaign <br>🟢 Team expansion<br>🟢 Launch Eggplant DEX<br>🟢 Add liquidity pools<br>🟢 Add staking features<br><br>Q3 2021:<br>‍<br>🟡 Exchange listing<br>🟡 List on CoinMarketCap<br>🟡 Continued viral marketing campaigns and community building<br>🟡 Potential partnership announcements<br>🟡 Launch of Synthetic Assets trading via Band Protocol<br><br>Q4 2021:<br><br>🟡 Implement extra unique features for users<br>🟡 Lifestyle brand creation<br>🟡 Launch of NFT’s<br>🟡 More coming…<br><br><br>‍<br></p>
-        <div class="div-block-17"><img src="images/Logo-Eggplant-Circle.png" width="100" sizes="100px" srcset="images/Logo-Eggplant-Circle-p-500.png 500w, images/Logo-Eggplant-Circle-p-800.png 800w, images/Logo-Eggplant-Circle-p-1080.png 1080w, images/Logo-Eggplant-Circle-p-1600.png 1600w, images/Logo-Eggplant-Circle.png 2000w" alt="" class="image-8"></div>
+        <div class="div-block-17"><img src="images/Logo-Eggplant-Circle.png" width="100" sizes="100px" srcset="images/Logo-Eggplant-Circle-p-500.png 500w, images/Logo-Eggplant-Circle-p-800.png 800w, images/Logo-Eggplant-Circle-p-1080.png 1080w, images/Logo-Eggplant-Circle-p-1600.png 1600w, images/Logo-Eggplant-Circle.png 2000w" id="eggplant-token" alt="" class="image-8"></div>
         <h2 class="heading-5">$EGGPLANT Token</h2>
         <p class="paragraph-2">Eggplant ($EGGPLANT) is a token on Binance Smart Chain possessing a number of exciting features. Eggplant features a unique deflationary design that exponentially decreases the total supply with every transaction made. <br><br>Eggplant is a decentralized project, meaning it is completely community led and created by volunteers. Over 50% of tokens are burned forever, and the remaining circulating supply is available on the open market. We have added a 1% max transaction amount to avoid large transactions and price manipulation.<br>‍<br>
           <a href="https://eggplantcrypto.medium.com/introducing-eggplant-crypto-69ba2d30955f" target="_blank"><span class="text-span-4">Read more:<br>Introducing Eggplant<br><br>‍</span></a><br>
         </p>
-        <div class="div-block-17"><img src="images/Logo-ESeed-Circle.png" width="100" sizes="100px" srcset="images/Logo-ESeed-Circle.png 500w, images/Logo-ESeed-Circle.png 800w, images/Logo-ESeed-Circle.png 1080w, images/Logo-ESeed-Circle.png 1600w, images/Logo-ESeed-Circle.png 2000w" alt="" class="image-8"></div>
+        <div class="div-block-17"><img src="images/Logo-ESeed-Circle.png" width="100" sizes="100px" srcset="images/Logo-ESeed-Circle-p-500.png 500w, images/Logo-ESeed-Circle-p-800.png 800w, images/Logo-ESeed-Circle-p-1080.png 1080w, images/Logo-ESeed-Circle-p-1600.png 1600w, images/Logo-ESeed-Circle.png 2000w" id="eseed-token" alt="" class="image-8"></div>
         <h2 class="heading-5">$ESEED Token</h2>
         <p class="paragraph-2">Eseed ($ESEED) is a token that facilitates high APRs within our farming and staking platform and will be utilized as our very own Eggplant membership reward system. The more ESeed you hold, the greater the benefits. This includes, but won’t be limited to, farming and staking multipliers, multipliers to improve your chances with games and/or prediction markets, and discounts on merchandise or NFT collectibles.<br>‍<br>$EGGPLANT is the currency, while $ESEED is our rewards token. A proper ecosystem can’t have one without the other!<br>‍<br>
           <a href="https://eggplantcrypto.medium.com/introducing-our-rewards-token-eseeed-f73633f80b79" target="_blank"><span class="text-span-4">Read more:<br>Introducing our Rewards Token: $ESEED</span></a><br>
@@ -95,7 +102,7 @@
       </div>
     </div>
   </div>
-  <div class="footer">
+  <div id="press" class="footer">
     <div class="wrap">
       <div class="text-block-4"><br>Press</div><img src="images/marketwatch-vector-logo.png" loading="lazy" width="400" sizes="(max-width: 479px) 90vw, (max-width: 767px) 70vw, 400px" srcset="images/marketwatch-vector-logo-p-500.png 500w, images/marketwatch-vector-logo.png 1251w" alt="">
       <div class="text-block-4"><br><br></div>
